ToontownInfiniteRetro/logs/tti-retro-200525_211304.log
ToontownStart: Polling for game2 to finish...
ToontownStart: Game2 is finished.
ToontownStart: Starting the game.
ToontownStart: setting default font
TTLocalizer: Running in language: english
from toontown.toonbase.TTLocalizerEnglish import *
OTPLocalizer: Running in language: english
from otp.otpbase.OTPLocalizerEnglish import *
ToontownStart: Loading default gui sounds
ToontownStart: serverVersion:  tti-retro-dev
Preloading avatars...
Done preloading avatars.
Traceback (most recent call last):
  File "D:\Usuario\Downloads\tts\TTISource\Panda3D-1.9.0\python\lib\runpy.py", line 162, in _run_module_as_main
    "__main__", fname, loader, pkg_name)
  File "D:\Usuario\Downloads\tts\TTISource\Panda3D-1.9.0\python\lib\runpy.py", line 72, in _run_code
    exec code in run_globals
  File "D:\Usuario\Downloads\tts\TTISource\ToontownInfiniteRetro\toontown\toonbase\ToontownStart.py", line 129, in <module>
    from toontown.distributed import ToontownClientRepository
  File "toontown\distributed\ToontownClientRepository.py", line 41, in <module>
    from toontown.makeatoon import MakeAToon
  File "toontown\makeatoon\MakeAToon.py", line 6, in <module>
    from toontown.toon import LocalToon
  File "toontown\toon\LocalToon.py", line 47, in <module>
    from toontown.chat import ToontownChatManager
  File "toontown\chat\ToontownChatManager.py", line 14, in <module>
    from TTChatInputWhiteList import TTChatInputWhiteList
  File "toontown\chat\TTChatInputWhiteList.py", line 1, in <module>
    from otp.chat.ChatInputWhiteListFrame import ChatInputWhiteListFrame
  File "otp\chat\ChatInputWhiteListFrame.py", line 43
    self.chatEntry = DirectEntry(**entryOptions, numLines = 7, width=12.6)
                                               ^
SyntaxError: invalid syntax
